    particular 3-letter code if they have been already read in (rather
    than run libcheck blindly) [Ian Tickle].
 
  o CHANGE: SSM overlayed molecule now takes symmetry of reference
    molecule

  o CHANGE: Waters are now represented with "~" in the sequence view -
    so that there is a distinction between waters and interesting
    hetatoms.

  o BUG-FIX:: Hydrogens on waters are no longer checked against the
    difference map in the water validation test.

  o BUG-FIX: rename residue works on only the specified chain.

  o BUG-FIX: anomalous maps are now properly recovered from the state
    file [Phil Evans].

  o BUG-FIX: Symmetry is updated on accepting a Rotate/Translate
    modification [Ezra Peisach].

  o BUG-FIX: NCS differences were broken by gaps of different lengths
    [Ingo Korndoerfer].

  o BUG-FIX: Unconventionally formatted atom tree records in
    restraints cif now no longer cause a crash when using Chi Angles
    [JED].

  o BUG-FIX: Fix the crash when sphere refine was used at the same
    time that the geometry graph was displayed [JED].

  o BUG-FIX: rotate/translate large fragments now works better.

  o BUG-FIX: transform-map function fixed for 5 arguments.

  o BUG-FIX: Sort-chains no longer loses header information [Bob
    Nolte].

  o BUG-FIX: Environment distances are no longer drawn between atoms
    with differing non-blank alt-confs.

  o BUG-FIX: Water search now avoids close contacts to waters
    generated in the same round.

  o BUG-FIX: Water check in gtk1 version no longer tries to
    dereference the difference map active checkbutton - fixes crash
    [Subhangi Ghosh].

  o BUG-FIX: mmCIF file writing fixed.

  o BUG-FIX: refining with structures from .res files sometimes crash
    when writing backup file on Mac [Derek Logan].

  o BUG-FIX: Rotating/translating ligands in CA+Ligands mode now works
    [Jim Thorpe].

  o BUG-FIX: Platinum can now have sensible bonds to N and O [John
    Helliwell].
