@@ -69,7 +69,7 @@ class CColourScheme {
       void fill_from(CMMDBManager *mol, int selHnd, float col_scale);
       void fill_surface(CMMDBManager *mol, int selHnd_selection, int SelHnd_all, float col_scale);
       void draw(double *override_colour, int selective_override);
-      void transparent_draw(float opacity) const;
+      void transparent_draw(float opacity);
       void evaluateElectrostaticPotential(CMMDBManager *theManager, int selHnd, float col_scale);
       int evaluatePhiAndColourWithDefaultScheme(CMMDBManager *theManager, const int selHnd, float col_scale);
       int evaluatePhiAndColourWithScheme(CMMDBManager *theManager,
